<resources>
    <string name="product_image_desc">Product Image</string>
    <string name="notification_desc">Notifications</string>
    <string name="favorite_desc">Favorites</string>
    <string name="cart_desc">Shopping Cart</string>
    <string name="search_desc">Search</string>
    <string name="app_name">AnAn</string>

    <string name="filter_desc">Filter Icon</string>
    <string name="home_desc">Home Navigation Icon</string>
    <string name="profile_desc">Profile Navigation Icon</string>
    <string name="back_desc">Back button</string>

</resources>