<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="66dp"
    android:background="@android:color/transparent"
    android:elevation="0dp"
    android:gravity="center"
    android:orientation="horizontal"
    android:layout_gravity="bottom"
    android:layout_marginBottom="32dp">

    <FrameLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center">

        <ImageView
            android:id="@+id/nav_home_detail"
            android:src="@drawable/ic_home_filled"
            app:tint="@android:color/white"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_gravity="center"
            android:background="@drawable/circle_background_white"
            android:padding="8dp"
            android:contentDescription="@string/home_desc"/>
    </FrameLayout>

    <FrameLayout
        android:id="@+id/btn_search_footer_detail"
        android:gravity="center"
        android:layout_height="88dp"
        android:layout_width="88dp">

        <ImageView
            android:background="@drawable/circle_background_black"
            android:contentDescription="@string/search_desc"
            android:layout_gravity="center"
            android:layout_height="58dp"
            android:layout_width="58dp"
            android:padding="12dp"
            android:src="@drawable/ic_search"
            app:tint="@android:color/black"/>
    </FrameLayout>

    <FrameLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center">

        <ImageView
            android:id="@+id/nav_profile_detail"
            android:src="@drawable/ic_profile_outline"
            app:tint="@android:color/white"
            android:visibility="visible"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_gravity="center"
            android:background="@drawable/circle_background_white"
            android:padding="8dp"
            android:contentDescription="@string/profile_desc"/>
    </FrameLayout>

</LinearLayout>